# xibao-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.py
src/: argparse.rs  error.rs  lib.rs  main.rs  previewer.rs  render.rs  resource.rs
