[package]
name = "xibao-gen"
version = "0.1.0"
edition = "2021"
description = "Generate Xǐbào(喜报, CONGRATULATIONS) image."
repository = "https://github.com/onion108/xibao-gen"
license = "MIT"

[dependencies]
sdl3 = { version = "0.15.1", features = ["image", "use-pkg-config"] }
skia-safe = { version = "0.89.0", features = ["textlayout"] }
thiserror = "2.0.3"

[build-dependencies]
pkg-config = "0.3.31"
